--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,80 @@ a.active {
   background: -webkit-linear-gradient(to right, rgba(251, 194, 235, 1), rgba(166, 193, 238, 1));
   background: linear-gradient(to right, rgba(251, 194, 235, 1), rgba(166, 193, 238, 1))
 }
+
+
+h3 {
+  font-size: 34px;
+  font-weight: 800;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.text-danger {
+  color: red;
+  font-size: 16px;
+  margin-top: 5px;
+}
+
+h3.error {
+  color: red;
+  font-weight: 500;
+}
+
+form {
+  display: inline-table;
+  flex-direction: column;
+  width: 300px;
+  margin-top: 10px;
+}
+
+input[type="password"], input[type="text"] {
+  padding: 9px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+input[type="password"]:focus, input[type="text"]:focus {
+  border-color: #007BFF;
+  outline: none;
+}
+
+button {
+  background-color: #007BFF;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 55px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.form__update {
+  background-color: #f9f9f9;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
+
+input, button {
+  transition: all 0.3s ease;
+}
+
+.error-message {
+  color: red;
+  font-size: 14px;
+  margin-top: -10px;
+  margin-bottom: 10px;
+}
