--- a/src/index.css
+++ b/src/index.css
@@ -133,3 +133,16 @@ input, button {
   margin-top: -10px;
   margin-bottom: 10px;
 }
+
+.list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.list img {
+  width: 150px;
+  height: 150px;
+  border-radius: 4px;
+  object-fit: cover;
+}
